1.6.4
---------
- Added ZFS System Rescue Module support. The code bases for my
  initramfs creator and for the SRM creator are now merged.
- When creating a ZFS initramfs/srm, the documentation will also
  be copied.
- sys-fs/squashfs-tools must be installed on your system.
- Some functions have been consolidated.
- Restructured a bit how files are located and copied
- udev rules will be copied to the initramfs/srm

1.6.3
---------
- Added the "nocache" kernel parameter. Use this if you have an
  old zpool.cache that is preventing you from booting.
- Added the "recover" kernel parameter. Use this if want to use the
  initrd as a recovery environment. (Stops initrd and goes into it
  without booting anything).

1.6.2
---------
- Added support to generate a regular initramfs that just boots directly
  into a partition with a filesystem that the kernel supports.
- Rewrote library dependency gathering algorithm
- Added better help and switch options
- Rewrote options passing algorithm
- 256 COLORS !!!

1.6.1
---------
- Rewrote the way the initramfs mounts the pool and rootfs. Now your
  "df" and "zfs list" will show the correct mount location for rootfs /
  rather than showing the location of where the initramfs mounted the pool
  "/mnt/root".
- You now must use pool_root= instead of pool_name=. Check the USAGE for more
  info.
- The initramfs now uses your zpool.cache if available. This speeds up booting
  since the initramfs doesn't need your scan for devices in order to find the
  pool.

1.6.0.1
---------
- Bug fix update, the modules directory wasn't being checked because it
  was still using the old INIT_TYPE variable. This has been fixed.

1.6.0
---------
- Colored output
- Renamed most variables and changed the prefix "JV" to "_".
- Added LUKS + ZFS support
- New application structure. The program now uses flags in order to determine
  what features were enabled. The check/copy functions are now streamlined. 