@@ -5,6 +5,9 @@
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
+#
+# This Source Code Form is "Incompatible With Secondary Licenses", as
+# defined by the Mozilla Public License, v. 2.0.
 
 # Description
 # ------------
@@ -50,7 +53,7 @@ if [ ! -z ${1} ]; then
 
 		if [ ! -z ${2} ]; then
 			_KERNEL=${2}
-		elif [ "${1}" != "3" ] && [ -z "${2}" ]; then
+		elif [ "${1}" != "3" ]; then
 			die "You must also pass a kernel name (i.e: createInit 1 ${_EXAMPLE_KERNEL})"
 		fi
 
@@ -69,7 +72,6 @@ clear
 print_header
 print_menu
 get_arch
-#do_kernel
 check_mods_dir
 clean
 print_start
@@ -78,10 +80,9 @@ check_prelim_binaries
 check_binaries && check_modules
 copy_binaries && copy_modules
 copy_docs
-#copy_rules
 do_modules
 do_deps
 create_links
 config_files
 create
-#clean_exit
+clean_exit
