@@ -3,13 +3,13 @@
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
+#
+# This Source Code Form is "Incompatible With Secondary Licenses", as
+# defined by the Mozilla Public License, v. 2.0.
 
 # Toggle Flags
 _USE_LUKS="1"
 _USE_MODULES="1"
-
-# Set the kernel we will be using here
-do_kernel
 
 # Required Binaries, Modules, and other files
 _LUKS_BINS="${_SBIN}/cryptsetup"
