@@ -1,9 +1,0 @@
-# Copyright (C) 2012, 2013 Jonathan Vasquez <jvasquez1011@gmail.com>
-#
-# This Source Code Form is subject to the terms of the Mozilla Public
-# License, v. 2.0. If a copy of the MPL was not distributed with this
-# file, You can obtain one at http://mozilla.org/MPL/2.0/.
-
-# Toggle Normal Boot Flag
-_USE_NORMAL="1"
-_USE_MODULES="0"
